# nameCardManager

./: .gitignore  Taskfile.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/plans/: namecard_manager_phase1.md
Taskfile/: Taskfile.backend.yml  Taskfile.frontend.yml
backend/: Dockerfile  alembic.ini  config.py  db.py  main.py  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: 1cfddae12df2_add_name_card_images_table.py  468f71c4ab75_add_pg_bigm_extension_and_gin_indexes.py  a70d42ed3c54_add_company_name_department_position_.py  af449d9de538_initial_schema.py  c414b17733a1_drop_contact_methods_label_column.py
backend/api/: __init__.py  deps.py
backend/api/v1/: namecards.py
backend/app/: main.py
backend/app/api/v1/: api.py  deps.py
backend/app/api/v1/endpoints/: auth.py  export.py  images.py  import_.py  namecards.py  relationships.py  search.py  tags.py
backend/app/core/: auth.py  config.py  database.py  http_protocol.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/models/: schemas.py
backend/services/: namecard_service.py
backend/tests/: conftest.py  test_auth.py  test_export_import.py  test_health.py  test_images.py  test_namecards.py  test_relationships.py  test_search.py  test_tags.py
docker/postgres/: Dockerfile
docs/: DEPLOYMENT.md  camera_frame_investigation.md  namecard_creation_failure_investigation.md  namecard_image_display_investigation.md  ocr_api_key_investigation.md  playwright_result.md  playwright_result_2.md  playwright_result_3.md  playwright_result_4.md  playwright_result_5.md  relationship_nested_investigation.md
docs/dev/backend/: db.md
docs/dev/db/: schema.md  usage.md
docs/dev/openapi-auto-docs/: examples.md  overview.md  quickstart.md
docs/plans/: design_decisions.md  frontend_test_cases.md  initial_impl.md  momus.md  multiple_images_feature.md  namecard_manager.md  test_cases.md
frontend/: Dockerfile  biome.json  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
frontend/__mocks__/: axios.ts
frontend/e2e/: auth.spec.ts  export-import.spec.ts  namecards.spec.ts  ocr.spec.ts  relationships.spec.ts  search.spec.ts  tags.spec.ts
frontend/src/__tests__/: setup.tsx
frontend/src/app/: globals.scss  layout.tsx  providers.tsx
frontend/src/contexts/: AuthContext.tsx  ToastContext.tsx
frontend/src/hooks/: useAuth.ts  (+1 more)
(+132 files in other folders)
